guitarix (0.03.3-1) unstable; urgency=low
  * add resampler for ir.wav files
  * autoremove white space in ir.wav file names
  * protected advanced setting widgets for destroy call from window manager
  * add graphically tuner
  * add jack midi out port
  * add pitch tracker/beatdetector to midi converter
  * add midi controlls for velocity, channel choose, program choose, okatve switch and sensity
  * add more midi out channels (3), clean up the processing
  * add controll interface for pitch tracker/beatdetector
  * add extra tread for midi processing
  * add system tray icon with menu
  * add high cpu load sys tray warning and midi send notify
  * clean up midi process
  * set midi process to a lower rt level (-20) when run in realtime

 -- brummer <brummer-@web.de>  Thu, 24 Dec 2008 14:24:42 +0200

guitarix (0.03.a-1) unstable; urgency=low
  * bug fix for jconv wet/dry slider
  * bug fix for jconv gain settings

 -- brummer <brummer-@web.de>  Thu, 03 Dec 2008 16:24:42 +0200


guitarix (0.03.0-1) unstable; urgency=low
  * add advanced setting widgets to distortion, freeverb, ImpulseResponse and Crybaby
  * rework the jconv settings window
  * split code

 -- brummer <brummer-@web.de>  Sun, 23 Nov 2008 16:24:42 +0200

guitarix (0.02.9a-1) unstable; urgency=low
  * bugfix for the run jconv handling
  * bugfix a typo in the Makefile for the LADSPAPATH
  * clean code

 -- brummer <brummer-@web.de>  Mon, 10 Nov 2008 13:55:42 +0200


guitarix (0.02.9-1) unstable; urgency=low
  * add a wet/dry fader for jconv
  * clean code

 -- brummer <brummer-@web.de>  Sat, 08 Nov 2008 13:55:42 +0200

guitarix (0.02.8-1) unstable; urgency=low
  * add more settings for jconv
  * clean code

 -- brummer <brummer-@web.de>  Thu, 06 Nov 2008 13:55:42 +0200

guitarix (0.02.7-1) unstable; urgency=low
  * add suport for jconv
  * use jack_capture_gui2 to create the comandline for jack_capture
  * add preamp
  * change preset handling to save by name include the jconv settings